welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:4: error: ';' expected but 'else' found.
while(!estSurBiscuit){avance();};recule();poseBiscuit();recule();};else(gauche();)
                                                                   ^